--- a/benchmark/graph.html
+++ b/benchmark/graph.html
@@ -474,6 +474,7 @@ function renderChart() {
     options: {
       responsive: true,
       maintainAspectRatio: false,
+      layout: { padding: { right: 40 } },
       interaction: { mode: 'nearest', intersect: false },
       scales: {
         x: {
