--- a/benchmark/graph.html
+++ b/benchmark/graph.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Total Level Benchmark Results</title>
+<title>Runescape Total Level over time</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.7/dist/chart.umd.min.js"></script>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -93,6 +93,30 @@
     border-color: #1a1a1a;
     color: #fff;
   }
+  .view-toggle {
+    display: inline-flex;
+    gap: 0;
+    margin-left: 16px;
+    vertical-align: middle;
+  }
+  .view-toggle button {
+    padding: 4px 14px;
+    background: #fff;
+    border: 1px solid #ddd;
+    color: #555;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 500;
+    transition: all 0.15s;
+  }
+  .view-toggle button:first-child { border-radius: 6px 0 0 6px; }
+  .view-toggle button:last-child { border-radius: 0 6px 6px 0; border-left: none; }
+  .view-toggle button.active {
+    background: #1a1a1a;
+    border-color: #1a1a1a;
+    color: #fff;
+  }
+  .view-toggle button:hover:not(.active) { border-color: #999; color: #1a1a1a; }
   .no-data {
     flex: 1;
     display: flex;
@@ -186,7 +210,12 @@
 <body>
 
 <div class="page-header">
-  <h1>Total level over time</h1>
+  <h1>Runescape Total Level over time
+    <span class="view-toggle" id="viewToggle" style="display:none">
+      <button data-view="level" class="active" onclick="setView('level')">Total Level</button>
+      <button data-view="tokens" onclick="setView('tokens')">Token Usage</button>
+    </span>
+  </h1>
 </div>
 <div class="page-subtitle" id="pageSubtitle">RS-Agent Benchmark</div>
 <button class="download-btn" onclick="downloadChart()" title="Download as PNG">&#8681;</button>
@@ -194,6 +223,9 @@
 <div class="chart-container" id="chartContainer" style="display:none">
   <canvas id="mainChart"></canvas>
   <div class="custom-tooltip hidden" id="customTooltip"></div>
+</div>
+<div class="chart-container" id="tokenChartContainer" style="display:none">
+  <canvas id="tokenChart"></canvas>
 </div>
 
 <div class="no-data" id="noData" style="display:none">
@@ -220,7 +252,7 @@ const MODEL_CONFIG = {
   'gemini': { displayName: 'Gemini 3 Pro',       color: '#4285f4', order: 3, icon: 'model-icons/gemini.webp' },
   'haiku':  { displayName: 'Claude Haiku 3.5',   color: '#e06090', order: 4, icon: 'model-icons/anthropic.svg' },
   'codex':  { displayName: 'Codex CLI',          color: '#10a37f', order: 5, icon: 'model-icons/openai.png' },
-  'glm':    { displayName: 'GLM 5',             color: '#6c5ce7', order: 6 },
+  'glm':    { displayName: 'GLM 5',             color: '#6c5ce7', order: 6, icon: 'model-icons/zai.png' },
 };
 
 // Pre-load model icons
@@ -247,7 +279,9 @@ const HORIZON_LABELS = {
 
 let combinedData = {};
 let currentHorizon = null;
+let currentView = 'level';
 let mainChart = null;
+let tokenChart = null;
 let hiddenModels = new Set();
 
 // ── Data loading ───────────────────────────────────────────────
@@ -364,6 +398,15 @@ function onDataLoaded() {
   }
   selectHorizon(currentHorizon);
   document.getElementById('loadSection').style.display = 'none';
+  document.getElementById('viewToggle').style.display = '';
+}
+
+function setView(view) {
+  currentView = view;
+  document.querySelectorAll('.view-toggle button').forEach(btn => {
+    btn.classList.toggle('active', btn.dataset.view === view);
+  });
+  renderCurrentView();
 }
 
 function selectHorizon(hz) {
@@ -371,7 +414,15 @@ function selectHorizon(hz) {
   document.querySelectorAll('.filter-tabs button').forEach(btn => {
     btn.classList.toggle('active', btn.dataset.hz === hz);
   });
-  renderChart();
+  renderCurrentView();
+}
+
+function renderCurrentView() {
+  if (currentView === 'tokens') {
+    renderTokenChart();
+  } else {
+    renderChart();
+  }
 }
 
 function getDataForHorizon(hz) {
@@ -408,17 +459,23 @@ function toggleModel(name) {
   } else {
     hiddenModels.add(name);
   }
-  renderChart();
+  renderCurrentView();
 }
 
 function renderChart() {
   const data = getDataForHorizon(currentHorizon);
   const container = document.getElementById('chartContainer');
+  const tokenContainer = document.getElementById('tokenChartContainer');
   const noData = document.getElementById('noData');
+
+  // Hide token chart
+  tokenContainer.style.display = 'none';
+  if (tokenChart) { tokenChart.destroy(); tokenChart = null; }
 
   if (Object.keys(data).length === 0) {
     container.style.display = 'none';
     noData.style.display = 'flex';
+    noData.textContent = 'No data available for this time horizon';
     document.getElementById('bottomLegend').innerHTML = '';
     return;
   }
@@ -443,15 +500,23 @@ function renderChart() {
     .filter(([name]) => !hiddenModels.has(name))
     .map(([name, d]) => {
     const config = MODEL_CONFIG[name] || { displayName: name, color: '#999' };
-    const samples = d.samples || [];
+    const HORIZON_MAX_MINUTES = { '5m': 5, '8m': 8, '10m': 10, '30m': 30, '1h': 60, '3h': 180 };
+    const maxMin = HORIZON_MAX_MINUTES[currentHorizon];
+    const samples = (d.samples || []).filter(s => !maxMin || s.elapsedMs / 60000 <= maxMin);
     return {
       label: config.displayName,
       modelKey: name,
-      data: samples.map(s => ({
-        x: s.elapsedMs / 60000,
-        y: s.totalLevel,
-        skills: s.skills,
-      })),
+      data: samples.map(s => {
+        const HIDDEN = new Set(['stat18', 'stat19']);
+        const hiddenLevels = s.skills ? Object.entries(s.skills)
+          .filter(([k]) => HIDDEN.has(k.toLowerCase()))
+          .reduce((sum, [, v]) => sum + (v.level || 0), 0) : 0;
+        return {
+          x: s.elapsedMs / 60000,
+          y: s.totalLevel - hiddenLevels,
+          skills: s.skills,
+        };
+      }),
       borderColor: config.color,
       backgroundColor: config.color,
       fill: false,
@@ -616,7 +681,10 @@ function renderChart() {
 
         if (raw.skills) {
           html += '<div class="tooltip-skills">';
-          const entries = Object.entries(raw.skills).sort((a, b) => b[1].level - a[1].level);
+          const HIDDEN_SKILLS = new Set(['stat18', 'stat19']);
+          const entries = Object.entries(raw.skills)
+            .filter(([name]) => !HIDDEN_SKILLS.has(name.toLowerCase()))
+            .sort((a, b) => b[1].level - a[1].level);
           for (const [skillName, skillData] of entries) {
             const leveled = skillData.level > 1 ? ' leveled' : '';
             const iconSrc = 'skill-icons/' + skillName.toLowerCase() + '.png';
@@ -657,6 +725,172 @@ function renderChart() {
   });
 }
 
+function formatTokens(n) {
+  if (n >= 1_000_000) return (n / 1_000_000).toFixed(1) + 'M';
+  if (n >= 1_000) return (n / 1_000).toFixed(0) + 'k';
+  return String(n);
+}
+
+function renderTokenChart() {
+  const data = getDataForHorizon(currentHorizon);
+  const container = document.getElementById('chartContainer');
+  const tokenContainer = document.getElementById('tokenChartContainer');
+  const noData = document.getElementById('noData');
+
+  // Hide the level chart
+  container.style.display = 'none';
+  if (mainChart) { mainChart.destroy(); mainChart = null; }
+
+  // Filter to models that have token data
+  const sortedEntries = Object.entries(data)
+    .filter(([, d]) => d.tokenUsage && (d.tokenUsage.inputTokens > 0 || d.tokenUsage.outputTokens > 0))
+    .sort((a, b) => {
+      const aTotal = (a[1].tokenUsage?.inputTokens || 0) + (a[1].tokenUsage?.outputTokens || 0);
+      const bTotal = (b[1].tokenUsage?.inputTokens || 0) + (b[1].tokenUsage?.outputTokens || 0);
+      return bTotal - aTotal;
+    });
+
+  if (sortedEntries.length === 0) {
+    tokenContainer.style.display = 'none';
+    noData.style.display = 'flex';
+    noData.textContent = 'No token usage data available for this time horizon';
+    document.getElementById('bottomLegend').innerHTML = '';
+    return;
+  }
+  tokenContainer.style.display = 'block';
+  noData.style.display = 'none';
+
+  // Update subtitle
+  const subtitle = document.getElementById('pageSubtitle');
+  const hzLabel = HORIZON_LABELS[currentHorizon] || currentHorizon;
+  if (currentHorizon === 'best' || currentHorizon === 'all') {
+    subtitle.textContent = 'Token usage — best run per model';
+  } else {
+    subtitle.textContent = `Token usage — ${hzLabel} benchmark`;
+  }
+
+  // Render legend (reuse existing)
+  renderBottomLegend(sortedEntries);
+
+  const visibleEntries = sortedEntries.filter(([name]) => !hiddenModels.has(name));
+
+  const labels = visibleEntries.map(([name]) =>
+    (MODEL_CONFIG[name] || { displayName: name }).displayName
+  );
+
+  const uncachedInput = visibleEntries.map(([, d]) => {
+    const tu = d.tokenUsage;
+    return (tu.inputTokens - tu.cacheTokens);
+  });
+  const cachedInput = visibleEntries.map(([, d]) => d.tokenUsage.cacheTokens);
+  const outputTokens = visibleEntries.map(([, d]) => d.tokenUsage.outputTokens);
+  const barColors = visibleEntries.map(([name]) =>
+    (MODEL_CONFIG[name] || { color: '#999' }).color
+  );
+
+  if (tokenChart) tokenChart.destroy();
+
+  tokenChart = new Chart(document.getElementById('tokenChart'), {
+    type: 'bar',
+    data: {
+      labels,
+      datasets: [
+        {
+          label: 'Input (uncached)',
+          data: uncachedInput,
+          backgroundColor: barColors.map(c => c + 'cc'),
+          borderColor: barColors,
+          borderWidth: 1,
+          borderSkipped: false,
+        },
+        {
+          label: 'Input (cached)',
+          data: cachedInput,
+          backgroundColor: barColors.map(c => c + '44'),
+          borderColor: barColors.map(c => c + '88'),
+          borderWidth: 1,
+          borderSkipped: false,
+        },
+        {
+          label: 'Output',
+          data: outputTokens,
+          backgroundColor: barColors.map(c => c),
+          borderColor: barColors,
+          borderWidth: 1,
+          borderSkipped: false,
+        },
+      ],
+    },
+    options: {
+      responsive: true,
+      maintainAspectRatio: false,
+      indexAxis: 'y',
+      layout: { padding: { right: 20 } },
+      scales: {
+        x: {
+          stacked: true,
+          title: {
+            display: true,
+            text: 'Tokens',
+            color: '#999',
+            font: { size: 13, weight: '400' },
+          },
+          ticks: {
+            color: '#aaa',
+            font: { size: 11 },
+            callback: (v) => formatTokens(v),
+          },
+          grid: { color: '#f0f0f0', drawTicks: false },
+          border: { color: '#e0e0e0' },
+        },
+        y: {
+          stacked: true,
+          ticks: { color: '#555', font: { size: 13, weight: '500' } },
+          grid: { display: false },
+          border: { display: false },
+        },
+      },
+      plugins: {
+        legend: {
+          display: true,
+          position: 'top',
+          labels: {
+            usePointStyle: true,
+            pointStyle: 'rectRounded',
+            padding: 16,
+            font: { size: 12 },
+            color: '#666',
+            generateLabels: function(chart) {
+              return [
+                { text: 'Input (uncached)', fillStyle: '#555', strokeStyle: '#555', lineWidth: 0 },
+                { text: 'Input (cached)', fillStyle: '#55555544', strokeStyle: '#55555588', lineWidth: 1 },
+                { text: 'Output', fillStyle: '#333', strokeStyle: '#333', lineWidth: 0 },
+              ];
+            }
+          },
+        },
+        tooltip: {
+          callbacks: {
+            label: (ctx) => {
+              const val = ctx.raw;
+              return `${ctx.dataset.label}: ${formatTokens(val)} (${val.toLocaleString()})`;
+            },
+            afterBody: (items) => {
+              if (items.length === 0) return '';
+              const idx = items[0].dataIndex;
+              const entry = visibleEntries[idx];
+              if (!entry) return '';
+              const tu = entry[1].tokenUsage;
+              const total = tu.inputTokens + tu.outputTokens;
+              return `\nTotal: ${formatTokens(total)} (${total.toLocaleString()})`;
+            },
+          },
+        },
+      },
+    },
+  });
+}
+
 function getModelAbbr(key) {
   const abbrs = {
     'opus': 'O',
@@ -670,10 +904,11 @@ function getModelAbbr(key) {
 }
 
 function downloadChart() {
-  if (!mainChart) return;
+  const chart = currentView === 'tokens' ? tokenChart : mainChart;
+  if (!chart) return;
   const link = document.createElement('a');
-  link.download = 'total-level-benchmark.png';
-  link.href = mainChart.canvas.toDataURL('image/png', 1.0);
+  link.download = currentView === 'tokens' ? 'token-usage-benchmark.png' : 'total-level-benchmark.png';
+  link.href = chart.canvas.toDataURL('image/png', 1.0);
   link.click();
 }
 
